examples/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/secure-backends: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: test-ingress
spec:
  rules:
  - host: arm.lab.trask.cz
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /nginx(/|$)(.*)
        pathType: Prefix
